created questions and started the github api call

--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "static-site",
+  "name": "readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "a readme generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Steven Lam",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
@@ -15,5 +15,18 @@
     "electron-html-to": "^2.6.0",
     "inquirer": "^6.3.1",
     "open": "^6.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/slam427/Readme-Generator.git"
+  },
+  "keywords": [
+    "readme",
+    "generator"
+  ],
+  "bugs": {
+    "url": "https://github.com/slam427/Readme-Generator/issues"
+  },
+  "homepage": "https://github.com/slam427/Readme-Generator#readme"
 }
