--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,32 +1,19 @@
 {
-  "name": "readme-generator",
+  "name": "static-site",
   "version": "1.0.0",
-  "description": "a readme generator",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Steven Lam",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "electron": "^5.0.3",
     "electron-html-to": "^2.6.0",
-    "inquirer": "^6.3.1",
+    "inquirer": "^6.5.2",
     "open": "^6.3.0"
-  },
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/slam427/Readme-Generator.git"
-  },
-  "keywords": [
-    "readme",
-    "generator"
-  ],
-  "bugs": {
-    "url": "https://github.com/slam427/Readme-Generator/issues"
-  },
-  "homepage": "https://github.com/slam427/Readme-Generator#readme"
+  }
 }
